--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <span class="moreinfo">
                 <li class="moreinfo projects"><a href="projects.html" target="_self">Current Projects</a></li>
                 <li class="moreinfo classes"><a href="classes.html" target="_self">Classes</a></li>
-                <li class="moreinfo about"><a href="about.html" target="_self" id="here">About</a></li>
+                <li class="moreinfo about"><a href="index.html" target="_self" id="here">About</a></li>
             </span>
         </ul>
     </nav>
