--- a/index.html
+++ b/index.html
@@ -1,37 +1,47 @@
 <!DOCTYPE html>
-<head>
-    <title>Shane Thoma</title>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    
     <link rel="stylesheet" href="style.css"> <!--main style sheet-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!--icons-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!--navbar link icons-->
     <base target="_blank"> <!--all links open in a new tab unless specified not to, for convenience-->
-</head>
-<body>
-    <nav class="navbar">
-        <ul class="navlinks">
-            <span class="socials">
-                <li class="social email" id="email"><a href="mailto:shanemthoma@gmail.com"><i class="fa fa-envelope"></i></a></li>
-                <li class="social github" id="github"><a href="https://github.com/shane-thoma"><i class="fa fa-github"></i></a></li>
-                <li class="social linkedin" id="linkedin"><a href="https://www.linkedin.com/in/shane-thoma-0276b4307"><i class="fa fa-linkedin"></i></a></li>
-                <li class="social instagram" id="instagram"><a href="https://www.instagram.com/thoma.shane"><i class="fa fa-instagram"></i></a></li>
-            </span>
-            <span class="moreinfo">
-                <li class="moreinfo projects"><a href="projects.html" target="_self">Current Projects</a></li>
-                <li class="moreinfo classes"><a href="classes.html" target="_self">Classes</a></li>
-                <li class="moreinfo about"><a href="index.html" target="_self" id="here">About</a></li>
-            </span>
-        </ul>
-    </nav>
-    <main>
-        <div>
-            <img class="center top" src="assets/ShanePhoto.png" alt="Photo of Shane Thoma">
-            <h1><b>Shane Thoma</b></h1>
-            <p>
-                I am a sophomore undergraduate student at <a href="https://wvu.edu">West Virginia University</a> pursuing a major in 
-                <a href="http://catalog.wvu.edu/undergraduate/collegeofengineeringandmineralresources/lanedepartmentofcomputerscienceand/computer_science/">Computer Science</a>
-                and a minor in <a href="http://catalog.wvu.edu/undergraduate/minors/data_science/">Data Science</a>. 
-                I am the secretary of  <a href="https://aiwvu.orgs.wvu.edu">Artificial Intelligence WVU</a>, 
-                an organization dedicated to teaching students about the applications of artificial intelligence.
-            </p>
-        </div>
-    </main>
-</body>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="Shane Thoma Personal Website"
+      content="Portfolio website created using create-react-app"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
+
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+    <title>Shane Thoma</title>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
+
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
+
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
+  </body>
+</html>
